--- a/main.html
+++ b/main.html
@@ -4,13 +4,59 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<h1 class="text-center">Internship Form</h1>
+		<div class=form-control>
+		<div class="d-flex">
+			<div class="my-2 mx-auto">
+		    <label for="first-name-input">First Name</label><br>
+		    <input type="text" id="first-name-input" required>
+			</div>
+			<div class="my-2 mx-auto">
+		    <label for="last-name-input">Last Name</label><br>
+		    <input type="text" id="last-name-input" required>
+			</div>
+			<div class="my-2 mx-auto">
+		    <label for="email-input">Email Address</label><br>
+		    <input type="email-input" id="firstname" placeholder="xyz@abc.com" required>
+			</div>
+		</div>
+		
+			<div class="d-flex">
+				<div class="my-2 mx-auto">
+				<label for="college-input">College</label><br>
+				<input type="text" id="college-input" required>
+				</div>
+				<div class="my-2 mx-auto">
+				<label for="choose_year">Graduation Year</label><br>
+				<select name="choose_year" id="choose_year" required>	
+					<option selected>Choose...</option>
+					<option value="2020">2020</option>
+					<option value="2021">2021</option>
+					<option value="2022">2022</option>
+					<option value="2023">2023</option>
+				</select>
+				</div>
+				<div class="my-2 mx-auto">
+					<label for="roll-no-input">Roll No</label><br>
+					<input type="number" id="roll-no-input" required>
+				</div>
+			</div>
+					<input type="checkbox" id="conditions-checkbox" required>
+					<label for="conditions-checkbox">Agree to terms and conditions</label>
+		   <br>
+		  <button class="btn btn-primary">Submit form</button>
+		</div>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 
 </html>
