--- a/main.html
+++ b/main.html
@@ -9,50 +9,70 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+	<form class="row">
 		<h1 class="text-center">Internship Form</h1>
-		<div class=form-control>
-		<div class="d-flex">
-			<div class="my-2 mx-auto">
-		    <label for="first-name-input">First Name</label><br>
-		    <input type="text" id="first-name-input" required>
-			</div>
-			<div class="my-2 mx-auto">
-		    <label for="last-name-input">Last Name</label><br>
-		    <input type="text" id="last-name-input" required>
-			</div>
-			<div class="my-2 mx-auto">
-		    <label for="email-input">Email Address</label><br>
-		    <input type="email-input" id="firstname" placeholder="xyz@abc.com" required>
+		<div class="col-4 mb-3">
+			<label for="first-name-input" class="form-label">First Name</label>
+			<input type="text" id="first-name-input" class="form-control is-invalid" required>
+			<div class="invalid-feedback">
+				First name required!
 			</div>
 		</div>
-		
-			<div class="d-flex">
-				<div class="my-2 mx-auto">
-				<label for="college-input">College</label><br>
-				<input type="text" id="college-input" required>
-				</div>
-				<div class="my-2 mx-auto">
-				<label for="choose_year">Graduation Year</label><br>
-				<select name="choose_year" id="choose_year" required>	
-					<option selected>Choose...</option>
-					<option value="2020">2020</option>
-					<option value="2021">2021</option>
-					<option value="2022">2022</option>
-					<option value="2023">2023</option>
-				</select>
-				</div>
-				<div class="my-2 mx-auto">
-					<label for="roll-no-input">Roll No</label><br>
-					<input type="number" id="roll-no-input" required>
+		<div class="col-4 mb-3">
+			<label for="last-name-input"  class="form-label">Last Name</label>
+			<input type="text" id="last-name-input" class="form-control is-invalid" required>
+		    <div class="invalid-feedback">
+				Last name required!
+			</div>
+		</div>
+		<div class="col-4 mb-3">
+			<label for="email-input"  class="form-label">Email Address</label>
+			<input type="text" id="email-input" placeholder="abc@xyz.com" class="form-control is-invalid" required>
+	        <div class="invalid-feedback">
+				Email required!
+			</div>	
+		</div>
+		<div class="col-6 mb-3">
+			<label for="college-input" class="form-label">College</label>
+			<input type="text" id="college-input" class="form-control is-invalid" required>
+		    <div class="invalid-feedback">
+				Please provide a valid college.
+			</div>
+		</div>
+		<div class="col-3 mb-3">
+			<label for="graduation-input" class="form-label">Graduation Year</label>
+			<select id="graduation-input" class="form-select is-invalid" aria-required>
+				<option selected>Choose...</option>
+				<option value="2020">2020</option>
+				<option value="2021">2021</option>
+				<option value="2022">2022</option>
+				<option value="2023">2023</option>
+			</select>
+			<div class="invalid-feedback">
+				Please provide a valid Graduation Year.
+			</div>
+		</div>
+		<div class="col-3 mb-3">
+			<label for="roll-no-input" class="form-label">Roll No</label>
+			<input type="number" id="roll-no-input" class="form-control is-invalid" required>
+			<div class="invalid-feedback">
+				Please provide a valid Roll no.
+			</div>
+		</div>
+		<div class="col-12 mb-3">
+			<div class="form-check">
+				<input type="checkbox" id="conditions-checkbox" class="form-check-input is-invalid" required>
+				<label for="conditions-checkbox" class="form-check-label">Agree to terms and conditions</label>
+				<div class="invalid-feedback">
+					You must agree before submitting.
 				</div>
 			</div>
-					<input type="checkbox" id="conditions-checkbox" required>
-					<label for="conditions-checkbox">Agree to terms and conditions</label>
-		   <br>
-		  <button class="btn btn-primary">Submit form</button>
+		</div>
+		<div class="col-12">
+			<button type="submit" class="btn btn-primary">Submit form</button>
 		</div>
 	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
