--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 		</div>
 		<div class="col-4 mb-3">
 			<label for="email-input"  class="form-label">Email Address</label>
-			<input type="text" id="email-input" placeholder="abc@xyz.com" class="form-control is-invalid" required>
+			<input type="email" id="email-input" placeholder="abc@xyz.com" class="form-control is-invalid" required>
 	        <div class="invalid-feedback">
 				Email required!
 			</div>	
@@ -40,8 +40,8 @@
 			</div>
 		</div>
 		<div class="col-3 mb-3">
-			<label for="graduation-input" class="form-label">Graduation Year</label>
-			<select id="graduation-input" class="form-select is-invalid" aria-required>
+			<label for="grad-year-select" class="form-label">Graduation Year</label>
+			<select id="grad-year-select" class="form-select is-invalid" aria-required>
 				<option selected>Choose...</option>
 				<option value="2020">2020</option>
 				<option value="2021">2021</option>
@@ -53,7 +53,7 @@
 			</div>
 		</div>
 		<div class="col-3 mb-3">
-			<label for="roll-no-input" class="form-label">Roll No</label>
+			<label for="roll-no-input" class="form-label">Roll No.</label>
 			<input type="number" id="roll-no-input" class="form-control is-invalid" required>
 			<div class="invalid-feedback">
 				Please provide a valid Roll no.
