--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 		</div>
 		<div class="col-3 mb-3">
 			<label for="grad-year-select" class="form-label">Graduation Year</label>
-			<select id="grad-year-select" class="form-select is-invalid" aria-required>
+			<select id="grad-year-select" class="form-select is-invalid" required>
 				<option selected>Choose...</option>
 				<option value="2020">2020</option>
 				<option value="2021">2021</option>
@@ -54,7 +54,7 @@
 		</div>
 		<div class="col-3 mb-3">
 			<label for="roll-no-input" class="form-label">Roll No.</label>
-			<input type="number" id="roll-no-input" class="form-control is-invalid" required>
+			<input type="text" id="roll-no-input" class="form-control is-invalid" required>
 			<div class="invalid-feedback">
 				Please provide a valid Roll no.
 			</div>
